# yandex-music-rs

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
src/api/: mod.rs  utils.rs
src/api/account/: consume_promo_code.rs  get_account_experiments.rs  get_account_settings.rs  get_account_status.rs  mod.rs  set_account_settings.rs
src/api/album/: get_album.rs  get_album_with_tracks.rs  get_albums.rs  mod.rs
src/api/artist/: get_artist.rs  get_artist_albums.rs  get_artist_track_ids.rs  get_artist_tracks.rs  mod.rs
src/api/collection/: sync.rs
src/api/common/: get_feed.rs  get_genres.rs  get_non_music_catalogue.rs  get_permission_alerts.rs  get_settings.rs  get_wizard_is_passed.rs  mod.rs
src/api/landing/: get_landing.rs  get_landing_block.rs  get_waves.rs  mod.rs
src/api/playlist/: add_liked_tracks.rs  change_playlist_visibility.rs  create_playlist.rs  delete_playlist.rs  get_all_playlists.rs  get_playlist.rs  get_playlists.rs  get_recommendations.rs  get_tagged_playlists.rs  mod.rs  modify_playlist.rs  remove_liked_tracks.rs  rename_playlist.rs
src/api/queue/: get_queue.rs  get_queues.rs  mod.rs  update_position.rs
src/api/rotor/: create_session.rs  get_all_stations.rs  get_session_tracks.rs  get_station.rs  get_station_account_status.rs  get_station_tracks.rs  get_stations_dashboard.rs  mod.rs  send_station_feedback.rs
src/api/search/: get_search.rs  get_search_suggestion.rs  mod.rs
src/api/tag/: get_playlists_with_tag.rs  mod.rs
src/api/track/: add_disliked_tracks.rs  add_liked_tracks.rs  get_disliked_tracks.rs  get_dislikes.rs  get_download_info.rs  get_file_info.rs  get_file_info_batch.rs  get_liked_tracks.rs  get_likes.rs  get_lyrics.rs  get_similar_tracks.rs  get_track.rs  get_track_supplement.rs  get_tracks.rs  mod.rs  play_audio.rs  remove_disliked_tracks.rs  remove_liked_tracks.rs
src/client/: builder.rs  mod.rs  request.rs
src/model/: album.rs  artist.rs  clip.rs  cover.rs  download_info.rs  label.rs  lyrics.rs  mod.rs  playlist.rs  supplement.rs  track.rs  utils.rs
src/model/account/: account_settings.rs  mod.rs  settings.rs  status.rs
src/model/account_model/: account.rs  mod.rs  (+3 more)
tests/: account.rs  album.rs  artist.rs  collection.rs  common.rs  info.rs  landing.rs  playlist.rs  rotor.rs  search.rs  tag.rs  track.rs
(+113 files in other folders)
