[package]
authors = ["vyfor"]
categories = ["api-bindings", "asynchronous", "multimedia", "multimedia::audio"]
description = "Rust wrapper for the Yandex Music API"
edition = "2021"
keywords = ["yandex", "music", "api", "client", "http"]
license = "MIT"
license-file = "LICENSE"
name = "yandex-music"
repository = "https://github.com/vyfor/yandex-music-rs"
version = "0.1.0"

[lib]
crate-type = ["lib"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
md5 = "0.7"
serde-xml-rs = "0.6"

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }
dotenv = "0.15"
