[package]
authors = ["vyfor"]
categories = ["api-bindings", "asynchronous", "multimedia", "multimedia::audio"]
description = "Rust wrapper for the Yandex Music API"
edition = "2021"
keywords = ["yandex", "music", "api", "client", "http"]
license = "MIT"
name = "yandex-music"
repository = "https://github.com/vyfor/yandex-music-rs"
version = "0.4.4"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
reqwest = { version = "0.13.1", features = ["form", "json"] }
md5 = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
serde-xml-rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }
dotenv = "0.15"
